# Practica1-LenguajesDeProgramaci-n

./: README.md
Practica1_LDP/: CMakeLists.txt  main.cpp
Practica1_LDP/Tasks/: FrontJack.cpp  FrontJack.h  FrontWingFlapAdjust.cpp  FrontWingFlapAdjust.h  LollipopMan.cpp  LollipopMan.h  RearJack.cpp  RearJack.h  SideJack.cpp  SideJack.h  TyreGunner.cpp  TyreGunner.h  TyreOff.cpp  TyreOff.h  TyreOn.cpp  TyreOn.h
Practica1_LDP/Teams/: F1team.cpp  F1team.h  PitCrewTeam.cpp  PitCrewTeam.h  TeamDriverA.cpp  TeamDriverA.h  TeamDriverB.cpp  TeamDriverB.h
Practica1_LDP/Teams/Tasks/: FrontJack.cpp  FrontJack.h  FrontWingFlapAdjust.cpp  FrontWingFlapAdjust.h  LollipopMan.cpp  LollipopMan.h  RearJack.cpp  RearJack.h  SideJack.cpp  SideJack.h  TyreGunner.cpp  TyreGunner.h  TyreOff.cpp  TyreOff.h  TyreOn.cpp  TyreOn.h
